Update packages3d destination for OS X
The OS X nightlies and releases have packages3d/ next to modules/, not inside of it, due to the way users like to install software on OS X.  While cleaning up before the upcoming 4.0.0 release, I found that if someone builds from OS X from source vs through the nightlies, the default paths aren't going to be right for one of those groups.  By changing it here, for OS X users only, everyone should start out at the same place.

--- a/modules/CMakeLists.txt
+++ b/modules/CMakeLists.txt
@@ -14,11 +14,17 @@ install(FILES ${mod_files}
         DESTINATION ${KICAD_MODULES}
         COMPONENT resources)
 
-install(DIRECTORY packages3d
-        DESTINATION ${KICAD_MODULES}
-        COMPONENT resources
-        PATTERN ".svn" EXCLUDE)
-
+if( APPLE )
+    install(DIRECTORY packages3d
+            DESTINATION ${KICAD_MODULES}/..
+            COMPONENT resources
+            PATTERN ".svn" EXCLUDE)
+else()
+    install(DIRECTORY packages3d
+            DESTINATION ${KICAD_MODULES}
+            COMPONENT resources
+            PATTERN ".svn" EXCLUDE)
+endif()
 install(DIRECTORY footprints_doc
         DESTINATION ${KICAD_MODULES}
         COMPONENT resources
